{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 114,
  "lineage": "c142fc5d-bb1f-891b-c36c-492401e251e0",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/networkSecurityGroups/private_subnet_nsg1",
            "location": "japaneast",
            "name": "private_subnet_nsg1",
            "resource_group_name": "komatsu-dx-app",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowPostgreSQL",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "sandbox",
              "project": "komatsu"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "protected_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/networkSecurityGroups/protected_subnet_nsg1",
            "location": "japaneast",
            "name": "protected_subnet_nsg1",
            "resource_group_name": "komatsu-dx-app",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_https",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAnyCustom5432Outbound",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "deny_all_outbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "delegation": [
              {
                "name": "fs",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/private_subnet1",
            "name": "private_subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "komatsu-dx-app",
            "virtual_network_name": "Vnet"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "protected_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "delegation": [
              {
                "name": "webapp",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/protected_subnet1",
            "name": "protected_subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "komatsu-dx-app",
            "virtual_network_name": "Vnet"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/private_subnet1",
            "network_security_group_id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/networkSecurityGroups/private_subnet_nsg1",
            "subnet_id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/private_subnet1"
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.private_subnet",
            "module.networking.azurerm_subnet.private_subnet",
            "module.networking.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "protected_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/protected_subnet1",
            "network_security_group_id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/networkSecurityGroups/protected_subnet_nsg1",
            "subnet_id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/virtualNetworks/Vnet/subnets/protected_subnet1"
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.protected_subnet",
            "module.networking.azurerm_subnet.protected_subnet",
            "module.networking.azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1043a6e9-1c5f-4118-99b8-0a2957a563d3",
            "id": "/subscriptions/fa40ee3f-0b7d-4f80-84b5-dd59c484dce7/resourceGroups/komatsu-dx-app/providers/Microsoft.Network/virtualNetworks/Vnet",
            "location": "japaneast",
            "name": "Vnet",
            "resource_group_name": "komatsu-dx-app"
          }
        }
      ]
    }
  ]
}